<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginTop="112dp"
        android:text="@string/welcome_as_admin"
        android:fontFamily="@font/oswaldlightitalic"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="300dp"
        android:layout_height="94dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/oswaldlightitalic"
        android:padding="10dp"
        android:text="@string/instructions"
        android:textAlignment="textStart"
        android:textColor="@color/orange"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textAlignment="center"
        android:fontFamily="@font/oswaldlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:padding="10dp"
        android:fontFamily="@font/oswaldlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="181sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>