<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicinePage">


    <TextView
        android:id="@+id/medicine"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/oswaldlightitalic"
        android:text="@string/medicine_name"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/medicineName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medicineName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oswaldheavyitalic"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/generic"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswaldlightitalic"
        android:text="@string/generic_name"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicine" />

    <TextView
        android:id="@+id/genericName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/oswaldheavyitalic"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/generic"
        app:layout_constraintTop_toBottomOf="@+id/medicineName" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="94dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/description"
        android:layout_width="371dp"
        android:layout_height="237dp"
        android:layout_marginTop="176dp"
        android:scrollbars="vertical"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionText"
            android:fontFamily="@font/oswaldlightitalic"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textSize="20sp"/>
    </ScrollView>

    <Button
        android:id="@+id/moreCommon"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/more_common_adrs"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lessCommon" />

    <Button
        android:id="@+id/lessCommon"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/less_common_adrs"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/rare"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/rare_found_adrs"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreCommon" />

</androidx.constraintlayout.widget.ConstraintLayout>