<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeDrugDetails">

    <TextView
        android:id="@+id/nameEditableADR"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/oswaldlightitalic"
        android:text="@string/medicine_name"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/getDrugName"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:fontFamily="@font/oswaldlightitalic"
        android:hint="@string/medicine_name"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/nameEditableADR"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genericNameEditableADR"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/generic_name"
        android:fontFamily="@font/oswaldlightitalic"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDrugName" />

    <EditText
        android:id="@+id/getGenericName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/generic_name"
        android:fontFamily="@font/oswaldlightitalic"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genericNameEditableADR"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/descriptionEditableEditor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:fontFamily="@font/oswaldlightitalic"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getGenericName" />

    <ScrollView
        android:id="@+id/getDescription"
        android:layout_width="330dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditableEditor">

        <EditText
            android:id="@+id/getDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/oswaldlightitalic"
            android:gravity="top|start"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:textAlignment="center"
            android:textSize="22sp" />
    </ScrollView>

    <Button
        android:id="@+id/submitDrug"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cancelDrug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDescription" />

    <Button
        android:id="@+id/cancelDrug"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:text="@string/cancel"
        android:background="@drawable/button"
        android:fontFamily="@font/oswaldmedium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>